--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@haxlet/code",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "bin": {
     "brain-games": "bin/brain-games.js",
