--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "brain-prime": "bin/brain-prime.js"
   },
   "type": "module",
-  "description": "[![Actions Status](https://github.com/Unukalhaiii/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Unukalhaiii/frontend-project-44/actions)",
+  "description": "Mind games project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Sergey Morozov",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0"
+    "eslint-plugin-import": "^2.27.5"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
